SERVER-26066 Fix dependency analysis for projections with expressions on dotted fields