src/mongo/db/query/projection.cpp
@@ -131,11 +131,15 @@ public:
     void visit(const ExpressionASTNode* node) final {
         // The output of an expression on a dotted path depends on whether that field is an array.
         invariant(node->parent());
-        if (!node->parent()->isRoot()) {
-            addFullPathAsDependency();
-        }
+        node->expressionRaw()->addDependencies(&_context->data().fieldDependencyTracker);
 
-        node->expression()->addDependencies(&_context->data().fieldDependencyTracker);
+        if (_context->fullPath().getPathLength() > 1) {
+            // If assigning to a top-level field, the value of that field is not actually required.
+            // Otherwise, any assignment of an expression to a field requires the first component
+            // of that field. e.g. {a.b.c: <expression>} will require all of 'a' since it may be an
+            // array.
+            addTopLevelPathAsDependency();
+        }
     }
 
     void visit(const BooleanConstantASTNode* node) final {
